<resources>
    <string name="app_name">云智远</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="member_login">会员登录</string>
    <string name="member_name">请输入用户名</string>
    <string name="member_password">请输入密码</string>
    <string name="member_submit">登录</string>
    <string name="tab_guanjia">管家</string>
    <string name="tab_xiaohuoban">小伙伴</string>
    <string name="tab_mishu">秘书</string>
    <string name="tab_wo">我</string>
    <string name="wo_dqzf">当前积分：</string>
    <string name="wo_xxtz">"    消息通知"</string>
    <string name="wo_jfgl">"    积分管理"</string>
    <string name="wo_zsk">"    知识库"</string>
    <string name="wo_shezhi">"    设置"</string>
    <string name="gj_yg">员工</string>
    <string name="gj_bom">BOM</string>
    <string name="gj_sb">设备</string>
    <string name="gj_xs">销售</string>
    <string name="gj_sc">生产</string>
    <string name="gj_oa">OA</string>
    <string name="gj_cw">财务</string>
    <string name="gj_kc">库存</string>
    <string name="gj_cg">采购</string>
    <string name="car_info">机台信息</string>
    <string-array name="spinner_cp">
        <item>空气阀</item>
        <item>开关阀</item>
        <item>电磁阀</item>
        <item>平衡车</item>
    </string-array>
    <string-array name="in_out_spinner">
        <item>出库</item>
        <item>入库</item>
        <item>盘点</item>
    </string-array>

    <string-array name="wl_spinner">
        <item>zn123</item>
        <item>zn234</item>
        <item>zn132</item>
        <item>zn332</item>
    </string-array>

    <string name="cp_prompt">请选择产品</string>
    <string name="count">http://121.40.199.67/TrackServer/GetCount</string>

</resources>
