<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_login"
        android:textSize="26dp"
        android:layout_margin="30sp"
        android:textColor="#000000"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_margin="20sp"
        android:hint="@string/member_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:hint="@string/member_password"
        android:layout_margin="20sp"
        android:id="@+id/password" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/login_submit"/>

</LinearLayout>
