<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/tab_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_wo"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/head_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/my_tab_background_u">

                <ImageView
                    android:id="@+id/head_picture"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/touxiang" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/head_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="玉龙车业"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wo_dqzf"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/head_dqzw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10"
                            android:textSize="18sp" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/erweima" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/mc_btn_top_pressed"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/wo_xxtz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background_u"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_list_txt_background"
                    android:drawableLeft="@drawable/xiaoxi"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/wo_xxtz"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wo_jfgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background_u"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_list_txt_background"
                    android:drawableLeft="@drawable/jifen"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/wo_jfgl"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wo_zxk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background_u"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_list_txt_background"
                    android:drawableLeft="@drawable/zhishi"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/wo_zsk"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wo_shezhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/my_tab_background_u"
                android:paddingBottom="0dp"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_list_txt_background"
                    android:drawableLeft="@drawable/shezhi"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/wo_shezhi"
                    android:textColor="#666666"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>